--- a/package.json
+++ b/package.json
@@ -12,12 +12,22 @@
   },
   "dependencies": {
     "@fortawesome/fontawesome-free": "^5.11.2",
+    "autoprefixer": "^9.7.2",
     "babel": "^6.23.0",
     "bootstrap": "^4.3.1",
     "express": "^4.17.1",
+    "extract-loader": "^3.1.0",
+    "extract-text-webpack-plugin": "^3.0.2",
+    "fs": "0.0.1-security",
     "jshint": "^2.10.3",
+    "lowdb": "^1.0.0",
+    "mosca": "^2.8.3",
+    "mqtt": "^3.0.0",
+    "path": "^0.12.7",
+    "postcss-loader": "^3.0.0",
     "rimraf": "^3.0.0",
     "sass": "^1.23.7",
+    "sqlite3": "^4.1.0",
     "uglifyjs": "^2.4.11",
     "webpack": "^4.41.2",
     "webpack-hot-middleware": "^2.25.0",
