--- a/package.json
+++ b/package.json
@@ -12,14 +12,19 @@
   },
   "dependencies": {
     "@fortawesome/fontawesome-free": "^5.11.2",
+    "@vue/cli": "^4.1.1",
     "autoprefixer": "^9.7.2",
+    "axios": "^0.19.0",
     "babel": "^6.23.0",
     "bootstrap": "^4.3.1",
+    "copy-webpack-plugin": "^5.0.5",
+    "cors": "^2.8.5",
     "express": "^4.17.1",
     "extract-loader": "^3.1.0",
     "extract-text-webpack-plugin": "^3.0.2",
     "fs": "0.0.1-security",
     "jshint": "^2.10.3",
+    "knockout": "^3.5.1",
     "lowdb": "^1.0.0",
     "mosca": "^2.8.3",
     "mqtt": "^3.0.0",
@@ -27,7 +32,6 @@
     "postcss-loader": "^3.0.0",
     "rimraf": "^3.0.0",
     "sass": "^1.23.7",
-    "sqlite3": "^4.1.0",
     "uglifyjs": "^2.4.11",
     "webpack": "^4.41.2",
     "webpack-hot-middleware": "^2.25.0",
